# bookmind-agent-suite

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  init_test.py  install_hermes.sh  install_openclaw.sh  publish.sh  pyproject.toml  requirements.txt  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
bookmind/: __init__.py  cli.py
bookmind/agents/: __init__.py  base_agent.py  structure_agent.py
bookmind/pipeline/: pdf_parser.py
bookmind/skills_runtime/: __init__.py  executor.py  registry.py  router.py
bookmind/templates/: anki_cards.csv.j2  expert_review.md.j2  mermaid_mindmap.md.j2  obsidian_note.md.j2  quick_reading.md.j2
docs/: architecture.md  commercial_usage.md  security.md  skill_design.md  troubleshooting.md
examples/: hermes_usage.md  openclaw_usage.md  sample_request.md
examples/output_examples/: example_report.md
skill-bundles/: book-reading-suite.yaml
skills/book-chapter-summarize/: SKILL.md
skills/book-chapter-summarize/scripts/: run_chapter_summarize.py
skills/book-concept-map/: SKILL.md
skills/book-concept-map/scripts/: run_concept_map.py
skills/book-critical-analysis/: SKILL.md
skills/book-critical-analysis/scripts/: run_critical_analysis.py
skills/book-deep-reading/: SKILL.md
skills/book-deep-reading/scripts/: run_book_deep_reading.py
skills/book-notes-export/: SKILL.md
skills/book-notes-export/scripts/: run_notes_export.py
skills/book-ocr-cleanup/: SKILL.md
skills/book-ocr-cleanup/scripts/: run_ocr_cleanup.py
skills/book-pdf-ingest/: SKILL.md
skills/book-pdf-ingest/scripts/: run_pdf_ingest.py
skills/book-qa/: SKILL.md
skills/book-qa/scripts/: run_qa.py
skills/book-review-cards/: SKILL.md
skills/book-review-cards/scripts/: run_review_cards.py
skills/book-toc-detect/: SKILL.md
skills/book-toc-detect/scripts/: run_toc_detect.py
tests/: conftest.py  test_chunker.py  test_export.py  test_orchestrator.py  test_pdf_parser.py  test_toc_detector.py
tests/fixtures/: sample_text.txt
