[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookmind"
version = "1.0.0"
description = "BookMind Multi-Agent Reading Suite - Deep PDF Book Interpretation for OpenClaw and Hermes"
readme = "README.md"
authors = [{ name = "BookMind Authors" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["book", "pdf", "reading", "agent", "openclaw", "hermes", "knowledge-management"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "jinja2>=3.1.3",
    "pymupdf>=1.24.0",
    "pypdf>=4.0.0",
    "pdfplumber>=0.10.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10", "ocrmypdf>=15.0.0"]
vector = ["faiss-cpu>=1.8.0", "rank-bm25>=0.2.2", "numpy>=1.26"]
export = ["markdown>=3.5", "weasyprint>=60.0", "beautifulsoup4>=4.12"]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "mypy>=1.8", "ruff>=0.3", "black>=24.0"]
full = [
    "pytesseract>=0.3.10", "ocrmypdf>=15.0.0",
    "faiss-cpu>=1.8.0", "rank-bm25>=0.2.2", "numpy>=1.26",
    "markdown>=3.5", "weasyprint>=60.0", "beautifulsoup4>=4.12",
    "pytest>=8.0", "pytest-cov>=4.1",
]

[project.scripts]
bookmind = "bookmind.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["bookmind*"]
exclude = ["tests*", "docs*", "examples*", "skills*", "skill-bundles*"]

[tool.setuptools.package-data]
"bookmind" = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.black]
line-length = 110
target-version = ["py311"]
